--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '2.3.7.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 }
 
-group 'org.example'
+group 'cn.blog.chy'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -12,6 +14,9 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    // 热部署插件
+    implementation 'org.springframework.boot:spring-boot-devtools'
 }
 
 test {
